@@ -1,5 +1,8 @@
 Changes with Apache 2.0.44
 
+  *) Always emit Vary header if mod_deflate is involved in the
+     request.  [AndréMalo <nd@perlig.de>]
+
   *) mod_isapi: Stop unsetting the 'empty' query string result with
      a NULL argument in ecb->lpszQueryString, eliminating segfaults
      for some ISAPI modules.  PR 14399
